# yts-cli

./: Cargo.toml  README.md
example/: config.toml
src/: app.rs  main.rs
src/config/: config_toml.rs  mod.rs
src/downloads/: mod.rs  transmission.rs
src/elements/: focus.rs  input.rs  mod.rs  movie_table.rs  popup.rs
